<resources>
    <string name="app_name">Android1_lesson1</string>
    <string name="moscow">Moscow</string>
    <string name="_15_00">15:00</string>
    <string name="_1_11_19">1.11.19</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="change_location">Change location</string>
    <string name="search_location">Search location</string>
    <string name="wind_speed">Wind speed</string>
    <string name="presure">Presure</string>
    <string name="back">Back</string>
    <string name="saintPetersburg">Saint Petersburg</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="dubai">Dubai</string>
    <string name="newYork">New York</string>
    <string name="tokyo">Tokyo</string>
    <string name="telAviv">Tel Aviv</string>
    <string name="today">Today :</string>
    <string name="temp">Temp :</string>
    <string name="pressure">Pressure :</string>
    <string name="wind_speed_today">Wind speed :</string>
    <string name="temptoday">temp today</string>
    <string name="pressuretoday">pressure today</string>
    <string name="wind_today">wind today</string>
    <string name="recycler_city">Recycler city</string>
    <string name="week_temp">Week temp</string>
    <string name="city_name">city name</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="weather_image">Weather image</string>

</resources>
