<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="65dp">

        <ImageView
            android:id="@+id/monImageView"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:contentDescription="@string/mon"
            app:srcCompat="@drawable/snow" />
        <ImageView
            android:id="@+id/tueImageView"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:contentDescription="@string/tue"
            app:srcCompat="@drawable/cloud" />
        <ImageView
            android:id="@+id/wedImageView"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:contentDescription="@string/wed"
            app:srcCompat="@drawable/flash" />
        <ImageView
            android:id="@+id/thuImageView"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:contentDescription="@string/thu"
            app:srcCompat="@drawable/cloud" />
        <ImageView
            android:id="@+id/friImageView"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:contentDescription="@string/fri"
            app:srcCompat="@drawable/sun" />
        <ImageView
            android:id="@+id/satImageView"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:contentDescription="@string/sat"
            app:srcCompat="@drawable/flash" />
        <ImageView
            android:id="@+id/sunImageView"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:contentDescription="@string/sun"
            app:srcCompat="@drawable/umbrella" />

</LinearLayout>