<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/searchLocation"
        android:hint="@string/search_location"
        android:layout_width="match_parent"
        android:layout_height="38dp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="390dp"
        android:layout_height="290dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/windSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed" />

    <CheckBox
        android:id="@+id/presure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/presure" />

</LinearLayout>